# PokeApp

./: .gitignore  Pokemon.db  README.md  charizard.txt  charmander.json  eevee.json  jigglypuff.json  jsonread.py  machamp.json  meowth.json  pyproject.toml  query.py  squirtle.txt  wigglytuff.json
GUI/: pokeGUI.py
Models/: DatabaseManager.py  Models.py  Pokemon.py  __init__.py  query.py
PokeApp/: Pipfile  Pokemon.db  pip-selfcheck.json  pokeGUI.py  pokemon.txt  query.py
PokeApp/Scripts/: activate  activate.bat
tests/unit/Models/: test_pokemon.py
