[tool.poetry]
name = "pokeapp"
version = "0.1.1"
description = "A virtual Pokedex using Python"
authors = ["Dayo <Calikidd86@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22"
sqlalchemy = "^1.3"
pillow = "^10.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
